// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses all xlsx files by pattern 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test",
      ],
      "obj": Object {
        "A": "test",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test",
      ],
      "obj": Object {
        "A": "test",
      },
    },
  },
]
`;

exports[`parses multiple sheets 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
  },
  Object {
    "formatted": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
  },
  Object {
    "formatted": Object {
      "arr": Array [
        "test1",
      ],
      "obj": Object {
        "A": "test1",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test1",
      ],
      "obj": Object {
        "A": "test1",
      },
    },
  },
]
`;

exports[`parses specific sheet by function 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
  },
]
`;

exports[`parses specific sheet by index 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
  },
]
`;

exports[`parses specific sheet by name 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
  },
]
`;

exports[`parses xlsx with header 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "column1": "hello",
        "column2": "world",
      },
    },
    "header": Array [
      "column1",
      "column2",
    ],
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "column1": "hello",
        "column2": "world",
      },
    },
  },
]
`;

exports[`parses xlsx without header 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
  },
]
`;

exports[`respects rowLimit 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        1,
      ],
      "obj": Object {
        "A": 1,
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        1,
      ],
      "obj": Object {
        "A": 1,
      },
    },
  },
  Object {
    "formatted": Object {
      "arr": Array [
        2,
      ],
      "obj": Object {
        "A": 2,
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        2,
      ],
      "obj": Object {
        "A": 2,
      },
    },
  },
  Object {
    "formatted": Object {
      "arr": Array [
        3,
      ],
      "obj": Object {
        "A": 3,
      },
    },
    "header": Array [],
    "raw": Object {
      "arr": Array [
        3,
      ],
      "obj": Object {
        "A": 3,
      },
    },
  },
]
`;
